[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
)/
| docs/conf.py
'''
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
known_third_party = [
    'pytest',
    'readmemaker',
    'typepy',
]
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
    '*/.eggs/*',
    '*/.pytype/*',
    '*/.tox/*',
]

[tool.coverage.run]
source = ['subprocrunner']
branch = true
omit = [
]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    'except ImportError',
    'raise NotImplementedError',
    'pass',
    'ABCmeta',
    'abstractmethod',
    'abstractproperty',
    'abstractclassmethod',
    'warnings.warn',
]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.7"

pretty = true

check_untyped_defs = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py37"
